Fix alignment issues

--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,6 @@ button {
 }
 
 img {
-  display: block;
   max-width: 100%;
 }
 
